--- a/docs/changelog-aidi/v1.6.x.md
+++ b/docs/changelog-aidi/v1.6.x.md
@@ -2,8 +2,26 @@
 id: v1.6.x
 title: Cambios en las versiones v1.6.x
 ---
+
+### ai·di 1.6.2
+**04/05/2022**
+
+- [ai·di] Se corrigió comprobación de validación de la identidad y se muestra los datos del usuario [#189](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/189)
+- [ai·di] Se soluciono el tiempo de verificación de toda la validación de identidad con un spinner [#186](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/186)
+- [ai·di] Se agregó un mensaje en el cartel de finalización de la validación de identidad [#184](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/184)
+- [ai·di]  Se ocultó y comentó el icono de Issuers en la barra principal de la app [#183](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/183)
+- [ai·di]  Se agrega a la pantalla de espera una frase [#182](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/182)
+
+### ai·di 1.6.1
+**20/04/2022**
+
+- [ai·di]  Se muestra un spinner en la esperar que se verifique la documentación [#181](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/181)
+- [ai·di] Se muestra los iconos inferiores, en el proceso de validación [#180](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/180)
+- [ai·di] Se restauró el cartel rojo, muestra el estado de la validación de identidad [#179](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/179)
+- [ai·di]  Se actualizo pantalla de inicio del proceso de validación de identidad [#178](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/178)
+
 ### ai·di 1.6.0
-**08/04/2021**
+**08/04/2022**
 - [ai·di] Se implementó la de la operación final por vuSecurity [#175](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/175)
 - [ai·di] Se implementó la lectura del código de barras por vuSecurity [#174](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/174)
 - [ai·di] Se implementó la captura de la selfie por vuSecurity [#173](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/173)
