fix: changelog has been updated

--- a/docs/changelog-aidi/v1.6.x.md
+++ b/docs/changelog-aidi/v1.6.x.md
@@ -11,7 +11,7 @@ title: Cambios en las versiones v1.6.x
 - [ai·di] Se creó y visualizar todo el proceso de respuesta a los requerimiento de un emisor [#195](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/195)
 ### ai·di 1.6.3
 **28/10/2022**
-- [ai·di] Se integró preguntas frecuentes, cierre de sesión, compartir credenciales,  validar identidad, términos y condiciones [#231](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/231)
+- [ai·di] Se integró preguntas frecuentes, cierre de sesión, términos y condiciones [#231](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/231)
 - [ai·di] Se agrego el formato de credenciales como un opción a elegir [#228](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/228)
 - [ai·di] Se mejoró flujo y visualización de las credenciales compartidas [#225](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/225)
 - [ai·di] Se agregó funcionalidad para la búsqueda de identidad Coopsol [#221](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/221)
